[project]
name = "reddit-scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ebooklib>=0.20",
    "markdown>=3.10.2",
    "openai>=1.0",
    "praw>=7.8.1",
    "pydantic-ai>=0.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot==22.7",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "tqdm>=4.67.3",
]
